--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -675,3 +675,15 @@ author = "J. H. Miller"
   doi          = {10.5281/zenodo.3516652},
   url          = {https://doi.org/10.5281/zenodo.3516652}
 }
+
+@article{tzafestas-2000a,
+ author = {E. Tzafestas},
+ booktitle = {From Animals to animals: Proceedings of the 6th International
+Conference on the Simulation of Adaptive Behavior (SAB-2000)},
+ key = {tzafestas-2000a},
+ month = {Sep},
+ pages = {334--340},
+ title = {Toward adaptive cooperative behavior},
+ volume = {2},
+ year = {2000}
+}
