--- a/paper/main.tex
+++ b/paper/main.tex
@@ -20,6 +20,7 @@
 \usepackage{booktabs}
 \usepackage{tabularx}
 \usepackage{wrapfig, blindtext}
+\usepackage{soul}
 \usepackage[table]{xcolor}
 %%%%%%%%%%%%%%%%%
 
@@ -51,10 +52,11 @@ strategies in a very small number of tournaments,
 casting doubt on the generalizability of results from statistical perspective.
 This manuscript evaluates \numberofstrategies strategies in 45686
 tournaments, presents the top performing strategies, and analyzes their
-salient features. The results of the tournaments imply that there is not a single
-type of strategy that performs well in any Iterated Prisoner's Dilemma interaction.
+salient features. The results imply that there is not a single
+strategy that performs well in any Iterated Prisoner's Dilemma interaction.
 There are several properties, however, that heavily influence the best performing
-strategies: be nice, be provocable, be a little envious and be clever.
+strategies, these are: be nice, be provocable, be a little envious, be clever
+and adapt to the environment.
 \end{abstract}
 
 \section{Background}
@@ -85,65 +87,63 @@ strategies. Many tournaments have followed Axelrod's~\cite{Bendor1991,
 Harper2017, Kendall2007, Stephens2002, Stewart2012} and today more than 200
 strategies exist in the literature.
 
-In the 80's, Axelrod performed two computer tournaments~\cite{Axelrod1980a,
-Axelrod1980b}. The
+Axelrod performed two computer tournaments~\cite{Axelrod1980a,
+Axelrod1980b} in the 80's. The
 winner of both tournaments was the simple strategy Tit For Tat which cooperated
 on the first turn and then simply copied the previous action of its opponent.
-Axelrod concluded that the strategy's robustness was due to four different
-properties:
+Axelrod concluded that the strategy's robustness was due to four properties, which
+he adapted in four suggestions on doing well in an IPD:
 
 \begin{itemize}
     \item Do not be envious
     \item Be "nice"; Do not be the first to defect
-    \item Reciprocate both cooperation and defection
+    \item Reciprocate both cooperation and defection; Be provocable
     \item Do not be too clever
 \end{itemize}
 
 As a result of the strategy's strong performance in both tournaments, and moreover in a
 series of evolutionary experiments~\cite{Axelrod1981}, Tit For Tat was often
-claimed to be the most robust basic strategy in the IPD. 
+claimed to be the most robust basic strategy in the IPD.
 
-Further research proved that the strategy had weakness, and more
-specifically, it was shown that the strategy suffered in environments with
-noise~\cite{Bendor1991, Donninger1986, Molander1985, Hammerstein1984}. This was
+There are strategies which have built upon Tit For Tat, and the reciprocity based approach.
+In~\cite{Beaufils1997} Gradual was introduced which was constructed to have the
+same qualities as those of Tit for Tat except one, Gradual had a memory
+of the game since the beginning of it. Gradual recorded the number of defections
+by the opponent and punished them with a growing number of defections. It would
+then enter a calming state in which it would cooperates for two rounds. A
+strategy with the same intuition as Gradual is Adaptive Tit for
+Tat~\cite{tzafestas-2000a}. Adaptive Tit for Tat does not keep a permanent
+count of past defections, it maintains a continually updated estimate of the
+opponent's behaviour, and uses this estimate to condition its future actions.
+
+Other works have built upon the limitations of the strategy, and others have shown
+that suggestions made by Axelrod were incomplete.
+In~\cite{Bendor1991, Donninger1986, Molander1985, Hammerstein1984} it was shown
+that Tit For Tat suffered in environments with noise. This was
 mainly due to the strategy's lack of generosity and contrition. The strategy was
 quick to punish a defection, and in a noisy environment it could lead to a
 repeated cycle of defections and cooperations. Some new strategies, more
 robust in tournaments with noise, were soon introduced and became the new
 protagonists of the game. These include Nice and Forgiving~\cite{Bendor1991},
 Pavlov~\cite{Nowak1993} and Generous Tit For Tat~\cite{Nowak1992}.
-Several works extended the reciprocity based approach which has led to new
-strategies. For example Gradual~\cite{Beaufils1997} which was constructed to
-have the same qualities as those of Tit for Tat except one,
-\textit{Gradual} had a memory of the game since the beginning of it. Gradual
-recorded the number of defections by the opponent and punished them with a
-growing number of defections. It would then enter a calming state in which it
-would cooperates for two rounds. In a tournament of 12 strategies, including
-both Tit for Tat and Pavlov, Gradual managed to outperformed them all. A
-strategy with the same intuition as Gradual is \textit{Adaptive Tit for
-Tat}~\cite{tzafestas-2000a}. Adaptive Tit for Tat does not keep a permanent
-count of past defections, it maintains a continually updated estimate of the
-opponent’s behaviour, and uses this estimate to condition its future actions. In
-the exact same tournament as in~\cite{Beaufils1997} with now 13 strategies Adaptive
-Tit for Tat ranked first.
-A set of IPD strategies that have received a lot of attention
-are the zero-determinant strategies (ZDs)~\cite{Press2012}. By
+In~\cite{Press2012} a set of envious IPD strategies that have received a lot of
+attention were introduced called the zero-determinant strategies (ZDs). By
 forcing a linear relationship between the payoffs ZDs can ensure that they will
-never receive less than their opponents. The
-American Mathematical Society's news section stated that ``the world of game
-theory is currently on fire''.
-ZDs are indeed a set of mathematically unique strategies
-and robust in pairwise interactions, however, their superiority in tournament settings
-have been tested. In~\cite{Harper2017} a tournament containing over
-200 strategies, including ZDs, was ran and none of them
-ranked in top spots. Instead, the top ranked strategies were a set of
-trained strategies based on lookup tables~\cite{Axelrod1987}, hidden markov
+never receive less than their opponents. ZDs are indeed a set of mathematically
+unique strategies and robust in pairwise interactions, however, their
+superiority in tournament settings have been tested. In~\cite{Harper2017} a
+series of clever strategies were introduced, and a tournament containing over
+200 strategies was ran and none of the aforementioned strategies ranked in top
+spots. Instead, the top ranked strategies were the set of clever trained
+strategies based on lookup tables~\cite{Axelrod1987}, hidden markov
 models~\cite{Harper2017} and finite state automata~\cite{Miller1996}.
 
-Though only select pieces of work have been discussed, the IPD literature is
-rich, and new strategies and competitions are being published every year~\cite{Glynatsi2019}. The
-question, however, still remains the same: what is the best way to play the
-game? Compared to other works, whereas a few selected strategies are evaluated
+Though only select pieces of work have been discussed, there is a board number
+of strategies in the literature, and new strategies and competitions are being
+published every year~\cite{Glynatsi2019}. The question, however, still remains
+the same: what is the best way to play the game?
+
+Compared to other works, whereas a few selected strategies are evaluated
 on a small number of tournaments, this manuscript evaluates the performance of \numberofstrategies
 strategies in \numberofalltournaments tournaments. These tournaments come in a
 number of variations including tournaments with noise, probabilistic match
@@ -152,22 +152,22 @@ The later part of the paper, evaluates
 the impact of features on the performance of the strategies using modern
 machine learning techniques. These features include measures regarding a
 strategy's behaviour and measures regarding the tournaments. The outcomes of our
-work reinforce the discussion started by Axelrod:
+work reinforce the discussion started by Axelrod, and it concludes that the properties
+of a successful strategy in the IPD are:
 
 \begin{itemize}
-    \item Do not be envious
+    \item \st{Do not be envious}
     \item Be "nice"; Do not be the first to defect
-    \item Reciprocate both cooperation and defection
-    \item Do not be too clever
+    \item Reciprocate both cooperation and defection; Be provocable
+    \item \st{Do not be too clever}
+    \item Adapt to the environment; Adjust to the mean cooperator
 \end{itemize}
-
-Furthermore, the data set used
-in this work has been made publicly available~\cite{data} and can be used
-for further analysis and insights.
 
 The different tournament types as well as the data collection, which is made
 possible due to an open source package called Axelrod-Python,
-are covered in Section~\ref{section:data_collection}.
+are covered in Section~\ref{section:data_collection}. The data set generated
+for this work has been made publicly available~\cite{data} and can be used
+for further analysis and insights.
 Section~\ref{section:top_performances}, focuses on the best performing
 strategies for each type of tournament and overall.
 Section~\ref{section:evaluation_of_performance}, explores the traits which
